...
          type={visible ? "text" : "password"}
          autoComplete="off"
          fullWidth
          slotProps={{
            htmlInput: {
              "data-testid": "login-input-nsec",
              "aria-label": "nsec input",
              autoCapitalize: "none",
              autoCorrect: "off",
              spellCheck: false,
            },
            input: {
              endAdornment: (
...
